// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select > select-columns 1`] = `
"SELECT *
FROM user"
`;

exports[`select > select-columns 2`] = `
"SELECT name,level AS rename_level,id AS id
FROM user"
`;

exports[`select > select-where-order-limit 1`] = `
"SELECT *
FROM user
WHERE limit IS NULL
ORDER BY id ASC NULLS FIRST
LIMIT 100
OFFSET 23"
`;
